aks/Poiimage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: default
  labels:
    app.kubernetes.io/name: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: poi
        version: beta-0514-1915
        deploy: 21-05-14-19-15-24
    spec:
      containers:
        - name: poi
          image: registryhhm0245.azurecr.io/poi:latest
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: team9-keyvault
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: poi-http
  selector:
    app: poi
