aks/deployment-tripviewer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: tripviewer
        image: registryhhm0245.azurecr.io/tripviewer:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: tripviewer
