aks/deployment-userprofile.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userprofile
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: userprofile
        image: registryhhm0245.azurecr.io/userprofile:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    name: poi-http
    port: 80
    targetPort: 80
  selector:
    app: userprofile
