aks/trips.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: tripinsight
  labels:
    app.kubernetes.io/name: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: trips
        version: beta-0514-1915
        deploy: 21-05-14-19-15-24
    spec:
      containers:
        - name: trips
          image: registryhhm0245.azurecr.io/trips:1.0 
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: tripinsight
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: trips-http
  selector:
    app: trips
