aks/userprofile.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: tripinsight
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userprofile
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: userprofile
        image: registryhhm0245.azurecr.io/userprofile:1.0
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/secrets"
            readOnly: true
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: team9-keyvault

---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: tripinsight
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    name: poi-http
    port: 80
    targetPort: 80
  selector:
    app: userprofile
