aks/userprofile-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userprofile
  namespace: api
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: tripviewer.bb83945b720a433ab833.ukwest.aksapp.io
    http:
      paths:
      - path: /api/user/
        pathType: Prefix
        backend:
          service: 
            name: userprofile
            port: 
              number: 80
      - path: /api/user/{id}
        pathType: Prefix
        backend:
          service: 
            name: userprofile
            port: 
              number: 80  
      - path: /api/user/healthcheck
        pathType: Prefix
        backend:
          service: 
            name: userprofile
            port: 
              number: 80
